fixes broken scroll issues on mobile

--- a/theme/assets/css/main.scss
+++ b/theme/assets/css/main.scss
@@ -537,6 +537,8 @@ html {
     right: 0;
     top: 0;
     z-index: 100;
+    height: 3rem;
+    width: 3rem;
     pointer-events: all;
     padding: $padding-card;
     background-color: transparent;
